<resources>
    <string name="app_name">GameDevClubApp</string>

    <!-- Strings related to login main activity-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <string name="action_visit_as_guest">Visit as a guest</string>

    <!-- Strings related to registration activity -->
    <string name="prompt_name">Name</string>
    <string name="prompt_repeated_password">Repeat password</string>
    <string name="prompt_short_description">Short description</string>
    <string name="prompt_long_description">Tell something more</string>

    <!-- Strings related to menu activity -->
    <string name="manu_my_profile">My profile</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_users">Users</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_projects">Projects</string>
    <string name="test_string">TEST</string>

</resources>

