<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <ImageView
            android:id="@+id/registrationNickImg"
            android:src="@drawable/user"
            style="@style/ImageIconsTheme"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintDimensionRatio="h,1:1"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
    />
    <EditText
            android:id="@+id/registrationNick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:inputType="textPersonName|textCapWords"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="56dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="24dp"
            app:layout_constraintStart_toEndOf="@+id/registrationNickImg" android:layout_marginStart="8dp"/>
    <ImageView
            android:id="@+id/registrationEmailImg"
            android:src="@drawable/envelope"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            style="@style/ImageIconsTheme" app:layout_constraintDimensionRatio="h,1:1"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/registrationNickImg" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <EditText
            android:id="@+id/registrationEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintStart_toEndOf="@+id/registrationEmailImg"
            app:layout_constraintTop_toBottomOf="@+id/registrationNick"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="24dp"
            app:layout_constraintLeft_toRightOf="@id/registrationEmailImg"
            android:importantForAutofill="no"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="24dp"/>
    <ImageView
            android:src="@drawable/key"
            android:id="@+id/registrationPasswordImg"
            android:layout_width="48dp"
            android:layout_height="48dp"
            style="@style/ImageIconsTheme"
            app:layout_constraintDimensionRatio="h,1:1"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/registrationEmailImg"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
    <EditText
            android:id="@+id/registrationPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintStart_toEndOf="@+id/registrationPasswordImg"

            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/registrationEmail"
            android:layout_marginStart="24dp"
            android:layout_margin="24dp"
            app:layout_constraintLeft_toRightOf="@id/registrationPasswordImg" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:id="@+id/registrationPasswordRepImg"
            android:src="@drawable/key"
            android:layout_width="48dp"
            android:layout_height="48dp"
            style="@style/ImageIconsTheme" android:layout_span="1"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/registrationPasswordImg"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:contentDescription="RepKeyImg"/>
    <EditText
            android:id="@+id/registrationPasswordRep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_repeated_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintStart_toEndOf="@+id/registrationPasswordRepImg"
            app:layout_constraintLeft_toRightOf="@id/registrationPasswordRepImg"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/registrationPassword"
            android:layout_marginStart="24dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_margin="24dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:id="@+id/registrationShortDescriptionImg"
            android:layout_width="48dp"
            android:layout_height="48dp"
            style="@style/ImageIconsTheme"
            app:srcCompat="@drawable/information"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/registrationPasswordRepImg"
            android:contentDescription="DescImg"/>
    <EditText
            android:id="@+id/registrationShortDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_short_description"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textImeMultiLine"
            android:singleLine="false"
            android:maxLines="4"
            android:lines="4"
            android:selectAllOnFocus="true"
            android:gravity="top"
            app:layout_constraintLeft_toRightOf="@id/registrationShortDescriptionImg"
            app:layout_constraintStart_toEndOf="@+id/registrationShortDescriptionImg"
            android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@+id/registrationPasswordRep" android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
    />
    <Button
            style="@style/ButtonsTheme"
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:text="@string/action_register"
            android:background="@color/colorLogoOrange"
            android:layout_span="3" android:layout_marginBottom="40dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:onClick="register" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/registrationShortDescription"
            app:layout_constraintVertical_bias="0.83"/>
    <android.support.constraint.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                      android:id="@+id/group"/>


</android.support.constraint.ConstraintLayout>