<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuGuestActivity"
        android:textAlignment="center"
>


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent" android:layout_height="0dp"
            android:id="@+id/menu_guest_linear_layout"
            android:layout_margin="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    app:srcCompat="@drawable/unlock"
                    android:id="@+id/menu_guest_unlock_button"
                    android:layout_weight="2"
                    android:layout_marginEnd="12dp"
                    android:minHeight="100dp"
                    style="@style/BlueButtonStyle"
            />
            <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    app:srcCompat="@drawable/right_chevron"
                    android:id="@+id/menu_guest_register_button_button"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:minHeight="100dp"
                    style="@style/RedButtonStyle"
            />

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_weight="2">
            <TextView
                    android:text="@string/action_sign_in_short"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/menu_guest_sign_in_buttonTitle"
                    android:layout_marginEnd="12dp"
                    android:textAlignment="center"
                    android:layout_weight="2" android:layout_marginTop="8dp" android:layout_marginStart="12dp"/>
            <TextView
                    android:text="@string/action_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/menu_guest_register_buttonTitle"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp"/>
        </LinearLayout>
    </LinearLayout>
    <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_default="spread"
            app:srcCompat="@drawable/users"
            android:id="@+id/menu_guest_users_ImgButton" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/menu_guest_linear_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintVertical_weight="3"
            android:minHeight="100dp"
            android:onClick="runPeople"
            style="@style/OrangeButtonStyle"


    />
    <TextView
            android:text="@string/menu_users"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/menu_guest_users_buttonTitle"
            app:layout_constraintTop_toBottomOf="@+id/menu_guest_users_ImgButton" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:textAlignment="center"/>

    <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_default="spread"
            app:srcCompat="@drawable/group_of_people"
            android:id="@+id/menu_guest_teams_ImgButton"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/menu_guest_users_buttonTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintVertical_weight="3"
            android:minHeight="100dp"
            android:onClick="runTeam"
            style="@style/OrangeButtonStyle"/>
    <TextView
            android:text="@string/menu_teams"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/menu_guest_teams_buttonTitle"
            app:layout_constraintTop_toBottomOf="@+id/menu_guest_teams_ImgButton" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:textAlignment="center"/>

    <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_default="spread"
            app:srcCompat="@drawable/project"
            android:id="@+id/menu_guest_projects_ImgButton" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/menu_guest_teams_buttonTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintVertical_weight="3"
            android:minHeight="100dp"
            style="@style/OrangeButtonStyle"
            android:onClick="runProject"/>
    <TextView
            android:text="@string/menu_projects"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/menu_guest_projects_buttonTitle"
            app:layout_constraintTop_toBottomOf="@+id/menu_guest_projects_ImgButton" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:textAlignment="center"
    />

</android.support.constraint.ConstraintLayout>