<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuActivity"
        android:textAlignment="center"
        android:layout_weight="20"
>

    <ImageButton
            android:layout_width="0dp"
            app:layout_constraintHeight_default="spread"
            android:layout_height="wrap_content" app:srcCompat="@drawable/lock"
            android:id="@+id/menu_logout_ImgButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_weight="3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/menu_4_linear_layout"
            android:minHeight="100dp"
            style="@style/RedButtonStyle"

    />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/menu_1_linear_layout"
            android:layout_margin="24dp"
            app:layout_constraintHeight_default="spread"
            app:layout_constraintTop_toBottomOf="@+id/menu_my_profile_buttonTitle" android:layout_marginTop="24dp"
            app:layout_constraintVertical_weight="3" tools:layout_editor_absoluteX="24dp">
        <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/calendar"
                android:id="@+id/menu_attendance_button"
                android:layout_weight="1"
                android:layout_marginEnd="12dp"
                android:minHeight="100dp"
                style="@style/OrangeButtonStyle"
                android:onClick="runAttendance"/>
        <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/users"
                android:id="@+id/menu_users_button"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:minHeight="100dp"
                style="@style/OrangeButtonStyle"
                android:onClick="runPeople"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
                  android:id="@+id/menu_2_linear_layout"
                  android:layout_margin="8dp"
                  android:layout_marginTop="8dp"
                  app:layout_constraintHeight_default="spread"

                  app:layout_constraintTop_toBottomOf="@+id/menu_1_linear_layout"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                  app:layout_constraintVertical_weight="1">
        <TextView
                android:text="@string/menu_attendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menu_users_buttonTitle"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/menu_users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menu_attendance_buttonTitle"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:textAlignment="center"/>
    </LinearLayout>
    <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_default="spread"
            app:srcCompat="@drawable/user"
            android:id="@+id/menu_my_profile_ImgButton" android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintVertical_weight="3"
            android:minHeight="100dp"
            style="@style/BlueButtonStyle"


    />
    <TextView
            android:text="@string/manu_my_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/menu_my_profile_buttonTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/menu_my_profile_ImgButton" android:textAlignment="center"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/menu_3_linear_layout"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@+id/menu_2_linear_layout" android:layout_marginTop="24dp"
            tools:layout_editor_absoluteX="24dp" app:layout_constraintVertical_weight="3">

        <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/network"
                android:id="@+id/menu_teams_button"
                android:layout_weight="1"
                android:layout_marginEnd="12dp"
                android:minHeight="100dp"
                style="@style/OrangeButtonStyle"
                android:onClick="runTeam"/>
        <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/project"
                android:id="@+id/menu_projects_button"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:minHeight="100dp"
                style="@style/OrangeButtonStyle"
                android:onClick="runProject"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
                  android:id="@+id/menu_4_linear_layout"
                  android:layout_margin="8dp"
                  android:layout_marginTop="8dp"
                  app:layout_constraintHeight_default="spread"
                  app:layout_constraintTop_toBottomOf="@+id/menu_3_linear_layout"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                  app:layout_constraintVertical_weight="1">
        <TextView
                android:text="@string/menu_teams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menu_teams_buttonTitle"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/menu_projects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menu_projects_buttonTitle"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:textAlignment="center"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>